@@ -13,12 +13,14 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
-apply from: "$rootDir/gradle/javaProject.gradle"
+
+plugins {
+    id 'javaProject'
+}
 
 dependencies {
-    implementation 'org.apache.commons:commons-lang3'
-    implementation 'info.picocli:picocli'
+    implementation libs.apache.commons.lang3
+    implementation libs.picocli
     implementation project(':ballerina-cli')
     implementation project(':ballerina-lang')
     implementation project(':semver-checker:semver-checker-core')
@@ -27,14 +29,3 @@ dependencies {
 description = 'Ballerina - Semver Checker CLI'
 
 ext.moduleName = 'io.ballerina.semver.checker.cli'
-
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-        ]
-        classpath = files()
-    }
-}
